Correct header spacing for body contnet

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -58,7 +58,11 @@ h3, .h3{
     @include breakpoint(medium) {
       padding: 0 $spacing-medium;
     }
-
+  }
+  h4 {
+    @include breakpoint(medium) {
+      margin-top: $spacing-medium;
+    }
   }
 }
 
